# fastapi-wishapp

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: README.md  env.py
alembic/versions/: a15d55c6379f_init.py
app/: config.py  database.py  main.py  server.py
app/models/: base.py  user.py  wishlist.py  wishlist_item.py
app/routers/: auth.py  security.py  users.py  wishlists.py
app/schemas/: token.py  whishlist_item.py  wishlist.py
app/services/: wishlist_services.py
clients/: generate.sh
clients/python/: create_user.py  get_wishlists.py  init.sh
tests/: conftest.py
tests/routers/: test_users.py
tests/sesrvices/: test_wishlist_service.py
