[tool.poetry]
name = "wishapp"
version = "0.1.0"
description = "Application to demonstrate FastAPI"
authors = ["k.shilovskiy <k.shilovskiy@reply.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
